# minesweeper

./: CMakeLists.txt
include/: game.h  global StackData.py  grid.h  io.h  player.h  vt100.h
src/: CMakeLists.txt  game.c  grid.c  io.c  main.c
